--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -270,31 +270,71 @@
 
 
 
-                                                    <div id="about"><h4>Global Big Bell</h4></div>
+                                                    {#<div id="about"><h4>Global Big Bell</h4></div>#}
 
-                                                    <p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>
-                                                    <p><b>Описание</b></p>
-                                                    <p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>
-                                                    <p><b>Отличия от других проектов</b></p>
-                                                    <p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>
-                                                    <p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>
-                                                    <p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>
-                                                    <p><b>Страхование капитала.</b></p>
-                                                    <p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>
-                                                    <p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>
+                                                    {#<p>Мы являемся экспертами в области аналитики и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств.</p>#}
+                                                    {#<p><b>Описание</b></p>#}
+                                                    {#<p>Global Big Bell – агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся в управлении. Наша цель – получить максимальную выгоду при минимальных рисках.</p>#}
+                                                    {#<p><b>Отличия от других проектов</b></p>#}
+                                                    {#<p>В чем наше отличие от других проектов? Мы являемся структурным проектом, совмещая лучший свойства аналогичных финансовых проектов.</p>#}
+                                                    {#<p>В наши портфели входит более 30 различных инструментов приумножения капитала с различной степенью рисков и доходности.</p>#}
+                                                    {#<p>Наша цель – прежде всего, сохранить Ваши средства, а потом приумножить их с максимально-лояльными и эффективными условиями. Ведь каждый из Вас хоть раз терял денежные средства в каких-либо недобросовестных проектах, «хайпах» или финансовых пирамидах, кладя «все яйца в одну корзину».</p>#}
+                                                    {#<p><b>Страхование капитала.</b></p>#}
+                                                    {#<p>Благодаря грамотному распределению капитала наши аналитики 30% Вашего депозита оставляют в консервативных инструментах, который также приносит доходность и позволяет в случае потери 70% остального вашего капитала в агрессивных инструментах, получить его обратно спустя некоторое время. Однако такой сценарий практически исключен.</p>#}
+                                                    {#<p>Это достигается умением наших аналитиков выбирать правильные                          и современные инструменты для инвестирования, учитывая все требования по риск-менеджменту и мани-менеджменту.</p>#}
 
 
-                                                    <p>Какие финансовые инструменты мы используем в своей работе?</p>
-                                                    <p>В составе наших портфелей используются такие инструменты, как:</p>
-                                                    <p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>
+                                                    {#<p>Какие финансовые инструменты мы используем в своей работе?</p>#}
+                                                    {#<p>В составе наших портфелей используются такие инструменты, как:</p>#}
+                                                    {#<p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля Forex, роботизированная торговля криптовалютой, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость                                           и доходные транспортные средства Тайланда и другие ликвидные инструменты.</p>#}
 
-                                                    <p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>
+                                                    {#<p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>#}
 
-                                                    <p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>
-                                                    <p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>
-                                                    <p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>
-                                                    <p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>
-                                                    <p>Будущее финансовой безопасности и процветания.</p>
+                                                    {#<p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>#}
+                                                    {#<p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>#}
+                                                    {#<p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>#}
+                                                    {#<p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>#}
+                                                    {#<p>Будущее финансовой безопасности и процветания.</p>#}
+
+
+
+
+
+                                    <div id="about"><h4>Инвестиционный Клуб Global Big Bell</h4></div>
+                                    <p>Мы являемся сообществом единомышленников в области аналитики               и инвестирования в различные современные финансовые инструменты, включая высокодоходные и недвижимость других государств, а также обучения финансовой грамотности и других видов обучения.</p>
+                                    <p>Описание</p>
+                                    <p>Чтобы изменить себя – измени Свое окружение!</p>
+                                    <p>Начни мыслить правильно!</p>
+                                    <p>Global Big Bell – это инвестиционный клуб, который представляет собой                  в первую очередь сообщество инвесторов и людей, которым интересно правильное инвестирование в проверенные инструменты, которым важно общаться и развиваться в позитивном окружении, которым важен современный подход к инвестициям.</p>
+                                    <p>Ведь сейчас в VUKA-мире (изменяющимся с большой скоростью) важно уметь приспосабливаться к меняющимся тенденциям и трендам.</p>
+                                    <p>Наша цель – дать членам Клуба возможность реализовываться в мире финансов, уменьшая вероятность совершения ошибок и минимизируя финансовые потери, обучаться финансовой грамотности, ведь только благодаря обучению возможно достичь положительных результатов в любой сфере.</p>
+                                    <p>Получать максимальную прибыль при минимальных рисках, приумножая свой капитал.</p>
+                                    <p>Что дает членство в клубе Global Big Bell?</p>
+                                    <p>Член Клуба получает следующие привилегии:</p>
+                                    <p>- знакомство и общение с единомышленниками Клуба, которые могут помочь Вам в достижении Ваших целей,</p>
+                                    <p>- использование специально отобранных и проверенных ресурсов                        и инструментов инвестирования Клуба Global Big Bell,</p>
+                                    <p>- бесплатно пользоваться лучшими платными роботами для приумножения своего капитала,</p>
+                                    <p>- консультации профессиональных инвесторов и трейдеров,</p>
+                                    <p>- выбор брокера и помощь в регистрации, а также подключение Вашего счета в наш пул инвесторов для осуществления прибыльных сделок и получения профита,</p>
+                                    <p>- обеспечении необходимыми материалами и информацией, касающейся инвестиционной деятельности, инсайдами,</p>
+                                    <p>- обучение членов Клуба финансовой грамотности, и помощь в правильном формировании инвестиционного Портфеля и выборе современных инструментов инвестирования,</p>
+                                    <p>- скидки на обучающие программы от 30% и выше,</p>
+                                    <p>- бизнес-завтраки с членами Клуба, общение,</p>
+                                    <p>- возможность создания своего бизнеса, открыв Франшизу Клуба Global Big Bell в разных городах России и заграницей.</p>
+                                    <p>Другими словами, при вступлении в инвестиционный Клуб Global Big Bell Вы попадаете в нужное окружение, экономите свое время, деньги, избегая распространенных ошибок инвесторов и добиваетесь своих целей, в том числе инвестиционных.</p>
+                                    <p>Успехов Вам!</p>
+                                    <p>А мы Вам в этом поможем!</p>
+                                    <p>Какие финансовые инструменты мы используем в своей работе?</p>
+                                    <p>В составе наших портфелей используются такие инструменты, как:</p>
+                                    <p>Российский фондовый рынок, фьючерсные контракты,  американский рынок первичных  ценных бумаг (IPO), роботизированная торговля на валютных и криптовалютных рынках, инвестиции в Европейские инвестиционные кампании, инвестиции в недвижимость и доходные транспортные средства иностранных государств и другие ликвидные инструменты.</p>
+
+                                    <p>Это позволяет получить максимальную прибыль с минимальными рисками, благодаря диверсификации рисков и системному подходу.</p>
+
+                                    <p>Вам не нужно тратить время на изучение того или иного финансового инструмента, инвестируя, ошибаясь и теряя капитал.</p>
+                                    <p>Мы уже сделали это для Вас, наш многолетний опыт позволяет нашим инвесторам безопасно вкладывать свои средства в сбалансированный портфель.</p>
+                                    <p>Все это дает нам право быть лидерами по уровню безопасности вложений, высокой доходности и надежности.</p>
+                                    <p>Будьте финансово-грамотными. Доверяйте свои вложения современным профессионалам рынка финансов! Прошлое в прошлом – вперед в светлое будущее!</p>
+                                    <p>Будущее финансовой безопасности и процветания.</p>
 
                                     <!-- ======================================= -->
                                 </div>
