--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -13,7 +13,7 @@
                                 <div class="row style-primary">
                                     <div class="col-sm-9">
                                         <div class="card-body style-default-dark">
-                                            <h2>Роботизированная торговля</h2>
+                                            <h2>Портфель № 2  «Роботизированная Торговля»</h2>
                                             <div class="text-default-light">
                                                 {#Posted by <a href="#">Admin</a>#} <br />
                                             </div>
@@ -69,6 +69,84 @@
                                                     {#<img class="height-3 pull-right img-circle" src="/materialadmin/assets/img/avatar1.jpg?1403934956" alt="" />#}
                                                     {#<p>Aliquam vehicula sem ut pede. Cras purus lectus, egestas eu, vehicula at, imperdiet sed, nibh. Morbi consectetuer luctus felis. Donec vitae nisi. Aliquam tincidunt feugiat elit. Duis sed elit ut turpis ullamcorper feugiat. Praesent pretium, mauris sed fermentum hendrerit.</p>#}
                                                 {#</div>#}
+
+
+
+
+
+
+
+                                                <p>Описание</p>
+                                                <p>Портфель №2 «Роботизированная торговля» создан для инвесторов, которые понимают и оценивают риски, готовые психологически к временным просадкам депозита до 10-20%, но последующим взлетам до 15-20 % в месяц, кому не страшна волатильность, и кто готов инвестировать в среднесрок             и долгосрок.</p>
+
+                                                <p>Основной инструмент в этом портфеле – роботизированная торговля, сфера применения – Валютный рынок и Криптовалютный рынок. Риски – умеренно-агрессивные и на среднесрочной  и долгосрочной дистанции дают отличный результат.</p>
+                                                <p>Сейчас масса предложений с различными автоматизированными алгоритмами, однако зачастую Вы покупаете кота в мешке и не знаете, как он работает. В этой связи инвестор платит сначала за робот до 1000 долларов, а потом еще и на нем теряет свои средства, потому что не соблюдает правила работы с инструментом, а чаще просто не знает что делать, либо купил робота-«сливатора».</p>
+                                                <p>Мы протестировали множество роботов для трейдинга и предлагаем членам Клуба использовать только те, которые стабильно показали себя на продолжительном периоде работы плюс те, которые имеют максимально низкие просадки и незакрытые сделки и т.д.</p>
+                                                <p>Вы получаете возможность пользоваться роботом бесплатно и по своему усмотрению.</p>
+                                                <p>Достижение стабильного  результата возможно только при соблюдении стратегии инвестирования, поэтому если вы не готовы психологически к временным просадкам, еще раз настоятельно рекомендуем не входить в этот портфель.</p>
+                                                <p>Возможность снятия депозита в любой момент без потери процентами.</p>
+
+                                                <p>Преимущества</p>
+                                                <p>1. Вам не нужно покупать робота для торговли</p>
+                                                <p>2. Вам не требуется учиться торговле на валютном и криптовалютном рынках</p>
+                                                <p>3. Мы уже настроили роботы для Вас</p>
+                                                <p>4. Исключение сценария потери 100 % депозита</p>
+                                                <p>5. Управляющий, который следит за роботом в режиме 24/7</p>
+                                                <p>6. В случае покупки, мы помогаем Вам в установке робота на Ваш компьютер и другая информационно-консультативная помощь</p>
+                                                <p>Основные характеристики</p>
+
+
+
+
+                                                    {#Основные характеристики портфеля №2#}
+                                                {#Показатели#}
+                                                {#Доходность#}
+                                                {#10-20%-месяц#}
+                                                {#Риск#}
+                                                {#до 10-20% от депо#}
+                                                {#Минимальная сумма входа#}
+                                                {#100$#}
+                                                {#Частота выплат#}
+                                                {#каждый день#}
+                                                {#Минимальный срок работы портфеля#}
+                                                {#любой#}
+                                                {#Вывод тела депозита#}
+                                                {#да#}
+                                                {#Стратегия инвестирования#}
+                                                {#среднесрочная и долгосрочная#}
+
+
+
+
+
+
+
+
+
+
+                                                <p>В Портфеле №2 «Роботизированная торговля» имеется несколько вариантов инвестирования:</p>
+                                                <p>ВАРИАНТ №1 На своем счете в брокере, копируя сделки нашего робота. При этом Вам необходимо открыть счет в брокере и подключиться по указанным нами реквизитам, завести на Ваш счет денежные средства и получать доход. В данном случае взимается комиссия за открытие лота автоматически в системе брокера.</p>
+                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №1 «Роботизированная Торговля»</p>
+
+                                                <p>ВАРИАНТ №2 На нашем счете, не устанавливая робота и не разбираясь с брокерами, инструкциями по установке, подключением VPS сервера и т.д. Все за вас сделаем мы. Вам остается только наблюдать статистику и получать профит. При этом Вы оплачиваете комиссию от 10 до 30 % от суммы чистой прибыли (в зависимости от суммы депозита) на реквизиты Global Big Bell. Вывод моментально на кошелек Payeer или другими имеющимися способами, в том числе криптовалютой.</p>
+                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</p>
+
+                                                <p>ВАРИАНТ №3 Купив робота по нашей партнерской программе, при этом Вы можете получать прибыль от партнеров как внутри нашего Клуба по нашей реферальной программе (ссылка Реферальная программа). Также и внутри проектов самих роботов, в некоторых из них имеется очень интересный маркетинг для тех, кто работает со своей командой.</p>
+                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</p>
+
+
+                                                <p>Как зарегистрироваться в Портфель №2</p>
+                                                <p>Как пополнить Портфель №2 <a href="/#contact" style="color: #0a6ebd">Подробней  по запросу </a> </p>
+
+
+
+
+
+
+
+
+
+
                                             </div><!--end .card-body -->
                                         </article>
                                     </div><!--end .col -->
