--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -116,7 +116,52 @@
                                                 {#среднесрочная и долгосрочная#}
 
 
-
+                                                <table class="table table-bordered table-dark">
+                                                    <thead>
+                                                    <tr>
+                                                        <th scope="col">#</th>
+                                                        <th scope="col">Основные характеристики портфеля №2 </th>
+                                                        <th scope="col">Показатели</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr>
+                                                        <th scope="row">1</th>
+                                                        <td>Доходность</td>
+                                                        <td>до 10-25% - месяц</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>Риск</td>
+                                                        <td>до 10-20% от депо</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>Минимальная сумма входа</td>
+                                                        <td>100$</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>Частота выплат</td>
+                                                        <td>каждый день</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>Минимальный срок работы портфеля</td>
+                                                        <td>любой </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Вывод тела депозита</td>
+                                                        <td>да</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>Стратегия инвестирования</td>
+                                                        <td>Cреднесрочная и долгосрочная</td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
 
 
 
