--- a/templates/services/cars.html.twig
+++ b/templates/services/cars.html.twig
@@ -69,6 +69,21 @@
                                                     {#<img class="height-3 pull-right img-circle" src="/materialadmin/assets/img/avatar1.jpg?1403934956" alt="" />#}
                                                     {#<p>Aliquam vehicula sem ut pede. Cras purus lectus, egestas eu, vehicula at, imperdiet sed, nibh. Morbi consectetuer luctus felis. Donec vitae nisi. Aliquam tincidunt feugiat elit. Duis sed elit ut turpis ullamcorper feugiat. Praesent pretium, mauris sed fermentum hendrerit.</p>#}
                                                 {#</div>#}
+
+                                                <div class="well clearfix">
+                                                    {#<h4>About the author: Daniel Johnson</h4>#}
+                                                    {#<img class="height-3 pull-right img-circle" src="/main/img/logo.png" alt="" />#}
+                                                    {#<p> Подробная информация по запросу#}
+
+
+                                                    <a href="/#contact" style="color: #0a6ebd"> Подробней по запросу </a> </p>
+                                                </div>
+
+
+
+
+
+
                                             </div><!--end .card-body -->
                                         </article>
                                     </div><!--end .col -->
