--- a/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
@@ -14,6 +14,14 @@
         <div class="img-backdrop" style="background-image: url('/main/img/Cap-Dep-3.jpg')"></div>
         <div class="overlay overlay-shade-top stick-top-left height-3"></div>
         <div class="row">
+
+            {#<a class="btn btn-default-dark stick-top-right" href="#">Reply</a>#}
+
+            <a class="btn btn-default-dark stick-top-right " href="/profile/change-password" role="button"  style=" margin-top: 11px;" > <i class="md md-settings"></i> {{ 'Rедактировать пароль'|trans }}</a>
+
+
+
+
             <div class="col-md-3 col-xs-5">
                  <h3> Мой профиль </h3> <br/>
             </div><!--end .col -->
@@ -77,7 +85,7 @@
                                         <span class="input-group-addon"> </span>
                                         <a class="btn btn-default btn-success" href="/profile/edit" role="button"  style=" margin-top: 11px;" > <i class="md md-settings"></i> {{ 'Rедактировать профиль'|trans }}</a>
                                         <span class="input-group-addon"> </span>
-                                        <a class="btn btn-default " href="/profile/change-password" role="button"  style=" margin-top: 11px;" > <i class="md md-settings"></i> {{ 'Rедактировать пароль'|trans }}</a>
+                                        {#<a class="btn btn-default " href="/profile/change-password" role="button"  style=" margin-top: 11px;" > <i class="md md-settings"></i> {{ 'Rедактировать пароль'|trans }}</a>#}
                                     </div>
                                 <!-- ======================================= -->
                             </div>
