--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -38,7 +38,7 @@
     </marquee>
 
     <!-- Section: about -->
-    <section id="about" class="home-section text-center">
+    <section id="about" class="home-section text-center" style=" padding-bottom: 50px;">
         <div class="heading-about">
             <div class="container">
                 <div class="row">
@@ -262,8 +262,40 @@
             </div>
         </div>
 
+
+
     </section>
     <!-- /Section: about -->
+
+
+    {#<div class="row">#}
+    {#<div class="col-lg-2 col-lg-offset-5">#}
+        {#<a href="#contact"  class=" btn btn-skin pull-right " > Получить Консультацию! </a>#}
+    {##}
+
+    {#</div>#}
+
+{#</div>#}
+
+
+
+    <div class="heading-about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="wow bounceInDown" data-wow-delay="0.4s">
+                        <div class="section-heading">
+                            <center> <a href="#contact"  class=" btn btn-skin " > Получить Консультацию! </a> </center>
+
+                            <br />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
     <!-- Section: services -->
