--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -38,7 +38,7 @@
     </marquee>
 
     <!-- Section: about -->
-    <section id="about" class="home-section text-center" style=" padding-bottom: 50px;">
+    <section id="about" class="home-section text-center" style=" padding-bottom: 20px;">
         <div class="heading-about">
             <div class="container">
                 <div class="row">
@@ -285,7 +285,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
                         <div class="section-heading">
-                            <center> <a href="#contact"  class=" btn btn-skin " > Получить Консультацию! </a> </center>
+                            <center> <a href="#contact"  class=" btn btn-skin " > Получить Консультацию </a> </center>
 
                             <br />
                         </div>
